--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,7 +6,7 @@ img[lazy=loading] {
     transform: scale(.3);
 }
 .page-info-list{
-    height: calc(100vh - 380px);
+    height: calc(100vh - 490px);
     overflow: hidden;
 }
 .page{
@@ -24,4 +24,12 @@ img[lazy=loading] {
 }
 .slide-enter, .slide-leave-to{
     transform: translate3d(100%, 0, 0);
+}
+.mt90{
+    margin-top: 90px;
+}
+.page-view-list{
+    height: calc(100vh - 200px);
+    overflow: hidden;
+    margin-top: 90px;
 }
